--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -10,6 +10,10 @@
 	<true/>
 	<key>com.apple.security.cs.disable-library-validation</key>
 	<true/>
+	<key>keychain-access-groups</key>
+	<array>
+	<string>$(AppIdentifierPrefix)com.ras.riot</string>
+	</array>
 <true/>
 </dict>
 </plist>
