--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
   firebase_storage: ^11.2.4
-  image_picker: ^1.0.0
+  image_picker: ^1.0.4
+  device_info_plus: ^9.0.3
 
 dev_dependencies:
   flutter_test:
