--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^11.2.4
   device_info_plus: ^9.0.3
   image_picker: ^1.0.4
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
