--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ras.riot.RunnerTests</string>
+	<string>com.ras.riot</string>
 	<key>PROJECT_ID</key>
 	<string>riot-4n4n1f</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:352174878762:ios:85e7922f3f8917f521d353</string>
+	<string>1:352174878762:ios:b7f19e29e901ae4421d353</string>
+	<key>DATABASE_URL</key>
+	<string>https://riot-4n4n1f-default-rtdb.europe-west1.firebasedatabase.app</string>
 </dict>
 </plist>
